[gd_scene load_steps=7 format=3 uid="uid://b847fivc5bimb"]

[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="3"]
[ext_resource type="AudioStream" uid="uid://bmfbavfcn0pq8" path="res://fart_data/sfx/SFX_fart1.wav" id="3_lca6n"]
[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_audio.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://c7c0ymusji584" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Float.tscn" id="4_77njg"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/Navigation_Button.tscn" id="4_pc2lw"]

[node name="Input_sfx" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("4")
label_text = "Input_sfx"

[node name="Label" parent="." instance=ExtResource("3")]
layout_mode = 2

[node name="Input" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lca6n")
volume_db = 5.0
pitch_scale = 1.15

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Space2" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="sfx_name" parent="HBoxContainer/VBoxContainer2" groups=["Table Action"] instance=ExtResource("4_pc2lw")]
layout_mode = 2
size_flags_vertical = 3
auto_connect_signals = false
auto_set_minimum_size = false
auto_set_color = true

[node name="Play" parent="HBoxContainer/VBoxContainer2" groups=["Table Action"] instance=ExtResource("4_pc2lw")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
size_flags_vertical = 3
button_text = "Play"
auto_connect_signals = false
auto_set_minimum_size = false
auto_set_color = true

[node name="Stop" parent="HBoxContainer/VBoxContainer2" groups=["Table Action"] instance=ExtResource("4_pc2lw")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
size_flags_vertical = 3
button_text = "Stop"
auto_connect_signals = false
auto_set_minimum_size = false
auto_set_color = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Space" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -40.0
max_value = 10.0
step = 0.1
value = 5.0
tick_count = 1

[node name="Volume" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "75%"

[node name="Space2" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Pitch"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.3
max_value = 2.0
step = 0.01
value = 1.15

[node name="Pitch" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "50%"

[node name="MaxDistance" parent="HBoxContainer/VBoxContainer" instance=ExtResource("4_77njg")]
layout_mode = 2
label_text = "Max Distance"
is_label_button = false

[node name="input_templateBuffer" parent="." instance=ExtResource("2")]
layout_mode = 2

[connection signal="button_down" from="HBoxContainer/VBoxContainer2/sfx_name" to="." method="edit_audio_file"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/Play" to="." method="play_audio"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/Stop" to="." method="stop_audio_playback"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_pitch_value_changed"]
